Textbox box alignment Fix
Textbox box alignment Fix

--- a/Angular17_DemoProject/src/styles.css
+++ b/Angular17_DemoProject/src/styles.css
@@ -8,8 +8,8 @@
 .outerBorder
 {
     border: 1px solid lightgray;
-    border-radius: 10px;
-    padding: 15px;
+    border-radius: 5px;
+    padding-top: 5px;
 }
 
 .bolderLabel
